changes in invoice

--- a/project1/webapp/view/TilePage.view.xml
+++ b/project1/webapp/view/TilePage.view.xml
@@ -141,7 +141,7 @@
                                             header="Manage Invoice"
                                             press="TileV_onpressManageInvoice"
                                         >
-                                            <TileContent unit="Invoice">
+                                            <TileContent unit="Invoice Details">
                                                 <ImageContent
                                                     src="sap-icon://expense-report"
                                                 />
