Manage Invoice changes

--- a/project1/webapp/view/ManageInvoiceDetails.view.xml
+++ b/project1/webapp/view/ManageInvoiceDetails.view.xml
@@ -223,10 +223,10 @@
 												<m:Text class="amountText" text="{path:'InvoicePayment>/AllReceivedAmount',formatter: '.Formatter.fromatNumber'}" textAlign="End" />
 											</m:HBox>
 											<!-- Received TDS -->
-											<m:HBox justifyContent="SpaceBetween" visible="{=(${SelectedCustomerModel>/Status} === 'Payment Received' ||  ${SelectedCustomerModel>/Status} === 'Payment Partially') &amp;&amp; ${FilteredSOWModel>/Currency} === 'INR'}">
+											<!-- <m:HBox justifyContent="SpaceBetween" visible="{=(${SelectedCustomerModel>/Status} === 'Payment Received' ||  ${SelectedCustomerModel>/Status} === 'Payment Partially') &amp;&amp; ${FilteredSOWModel>/Currency} === 'INR'}">
 												<m:Label text="{i18n>invoiceReceivedIncomeTax} ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
 												<m:Text class="amountText" text="{path:'InvoicePayment>/AllReceivedTDS',formatter: '.Formatter.fromatNumber'}" textAlign="End" />
-											</m:HBox>
+											</m:HBox> -->
 											<!-- Due Amount -->
 											<m:HBox justifyContent="SpaceBetween" visible="{= ${SelectedCustomerModel>/Status} === 'Payment Received' || ${SelectedCustomerModel>/Status} === 'Payment Partially' }">
 												<m:Label text="{i18n>invoiceDueAmount} ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
