Coupon changes in manage invoice

--- a/project1/webapp/view/ManageInvoiceDetails.view.xml
+++ b/project1/webapp/view/ManageInvoiceDetails.view.xml
@@ -192,6 +192,11 @@
 												<m:Label text="{i18n>subTotal} ({i18n>Taxable}) ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
 												<m:Text class="amountText" text="{path:'SelectedCustomerModel>/SubTotalInGST',formatter: '.Formatter.fromatNumber'}" textAlign="End" />
 											</m:HBox>
+											<!-- Coupon Discount -->
+											<m:HBox justifyContent="SpaceBetween" visible="{= ${SelectedCustomerModel>/CouponDiscountValue} > 0 }">
+											<m:Label text="Coupon Discount :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
+											<m:Text class="amountText" text="{path:'SelectedCustomerModel>/CouponDiscountValue', formatter: '.Formatter.fromatNumber'}" textAlign="End" />
+											</m:HBox>
 											<!-- CGST -->
 											<m:HBox justifyContent="SpaceBetween" visible="{= ${FilteredSOWModel>/Currency} === 'INR' &amp;&amp; ${SelectedCustomerModel>/Type} === 'CGST/SGST' }">
 												<m:Label text="{i18n>CGST} ({SelectedCustomerModel>/Value}%) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
@@ -222,11 +227,7 @@
 												<m:Label text="{i18n>invoiceReceivedAmount} ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
 												<m:Text class="amountText" text="{path:'InvoicePayment>/AllReceivedAmount',formatter: '.Formatter.fromatNumber'}" textAlign="End" />
 											</m:HBox>
-											<!-- Received TDS -->
-											<!-- <m:HBox justifyContent="SpaceBetween" visible="{=(${SelectedCustomerModel>/Status} === 'Payment Received' ||  ${SelectedCustomerModel>/Status} === 'Payment Partially') &amp;&amp; ${FilteredSOWModel>/Currency} === 'INR'}">
-												<m:Label text="{i18n>invoiceReceivedIncomeTax} ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
-												<m:Text class="amountText" text="{path:'InvoicePayment>/AllReceivedTDS',formatter: '.Formatter.fromatNumber'}" textAlign="End" />
-											</m:HBox> -->
+											
 											<!-- Due Amount -->
 											<m:HBox justifyContent="SpaceBetween" visible="{= ${SelectedCustomerModel>/Status} === 'Payment Received' || ${SelectedCustomerModel>/Status} === 'Payment Partially' }">
 												<m:Label text="{i18n>invoiceDueAmount} ({FilteredSOWModel>/Currency}) :" class="boldBlackText sapUiTinyMarginBottom rightAlignLabel" />
